--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ascent-frontend</title>
+    <meta
+      name="description"
+      content="Ascent is a luxurious personal growth app designed to help you master your habits, track progress, and elevate your mindset with elegance and clarity."
+    />
+    <meta
+      name="keywords"
+      content="Ascent, personal growth, habit tracker, productivity app, self improvement, journal, daily focus, insights, luxury design, progress tracker"
+    />
+    <title>Ascent - Elevate Your Growth</title>
   </head>
   <body>
     <div id="root"></div>
