chore: deploy to GitHub Pages and add README.md

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="Ascent, personal growth, habit tracker, productivity app, self improvement, journal, daily focus, insights, luxury design, progress tracker"
     />
     <title>Ascent - Elevate Your Growth</title>
+    <base href="/ascent-frontend/" />
   </head>
   <body>
     <div id="root"></div>
